<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <item android:id="@+id/menu_location" 
        android:visible="true" 
        android:title="@string/locMenu" 
        android:enabled="true" 
        android:icon="@android:drawable/ic_menu_mylocation"
        android:showAsAction="ifRoom|withText"/>
    <item android:id="@+id/menu_photo" 
        android:visible="true" 
        android:title="@string/photoMenu" 
        android:enabled="true" 
        android:icon="@android:drawable/ic_menu_camera"
        android:showAsAction="ifRoom|withText"/>
    <item android:id="@+id/menu_feature" 
        android:visible="true" 
        android:title="@string/featureMenu" 
        android:enabled="true" 
        android:icon="@drawable/ic_menu_feature"
        android:showAsAction="ifRoom|withText"/>
    
</menu>