<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout 
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:layout_margin="5dp">
	    <FrameLayout android:id="@+id/headlist"
    		android:layout_width="match_parent"
    		android:layout_height="wrap_content">
		    <ImageView
	            android:layout_width="match_parent"
	            android:layout_height="match_parent"
	            android:contentDescription="@string/app_name"
	            android:src="@drawable/wiki_list_head" />
		    <TextView 
	            android:layout_width="match_parent"
	            android:layout_height="match_parent"
		        android:gravity="center"
		        android:textColor="#ffffff"
		        android:textStyle="bold"
		        android:text="@string/list_msg"
		        android:textSize="30sp" />
		    </FrameLayout>	    
	    <ListView 
	        android:id="@+id/list_view"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:gravity="center"
	        android:scrollbarAlwaysDrawVerticalTrack="true"
	        android:loopViews="true" 
	        android:cacheColorHint="#00000000"
	        android:layout_below="@id/headlist"/>	
	</RelativeLayout>
    <TextView 
        android:id="@+id/empty_list_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:background="@drawable/widget_item_background"
        android:textColor="#ffffff"
        android:textStyle="bold"
        android:text="@string/empty_view_text"
        android:textSize="30sp" />
</FrameLayout>